[workspace]
members = [
    "bench-vortex",
    "build-vortex",
    "encodings/*",
    "pyvortex",
    "vortex-array",
    "vortex-buffer",
    "vortex-datafusion",
    "vortex-dtype",
    "vortex-error",
    "vortex-expr",
    "vortex-flatbuffers",
    "vortex-ipc",
    "vortex-sampling-compressor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
homepage = "https://github.com/fulcrum-so/vortex"
repository = "https://github.com/fulcrum-so/vortex"
authors = ["Robert Kruszewski <robert@fulcrum.so>, Nicholas Gates <nick@fulcrum.so>, Will Manning <will@fulcrum.so>"]
license = "Apache-2.0"
keywords = ["vortex"]
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
ahash = "0.8.11"
allocator-api2 = "0.2.16"
arrayref = "0.3.7"
arrow = { version = "52.0.0", features = ["pyarrow"] }
arrow-array = "52.0.0"
arrow-buffer = "52.0.0"
arrow-cast = "52.0.0"
arrow-csv = "52.0.0"
arrow-data = "52.0.0"
arrow-ipc = "52.0.0"
arrow-schema = "52.0.0"
arrow-select = "52.0.0"
async-trait = "0.1"
bindgen = "0.69.4"
bytes = "1.6.0"
bzip2 = "0.4.4"
cargo_metadata = "0.18.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
croaring = "1.0.1"
csv = "1.3.0"
datafusion = "39.0.0"
datafusion-common = "39.0.0"
datafusion-execution = "39.0.0"
datafusion-expr = "39.0.0"
datafusion-physical-expr = "39.0.0"
datafusion-physical-plan = "39.0.0"
divan = "0.1.14"
duckdb = { version = "0.10.2", features = ["bundled"] }
enum-iterator = "2.0.0"
enum_dispatch = "0.3.13"
fallible-iterator = "0.3.0"
fastlanes = "0.1.5"
flatbuffers = "24.3.25"
flexbuffers = "2.0.0"
fs_extra = "1.3.0"
futures = { version = "0.3.30", default-features = false }
futures-executor = "0.3.30"
futures-util = "0.3.30"
getrandom = "0.2.14"
half = { version = "^2", features = ["std", "num-traits"] }
hashbrown = "0.14.3"
humansize = "2.1.3"
itertools = "0.13.0"
lazy_static = "1.4.0"
leb128 = "0.2.5"
log = "0.4.21"
monoio = "0.2.3"
num-traits = "0.2.18"
num_enum = "0.7.2"
parquet = "52.0.0"
paste = "1.0.14"
pin-project = "1.1.5"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py311"] }
pyo3-log = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.0", features = ["blocking"] }
seq-macro = "0.3.5"
serde = "1.0.197"
serde_json = "1.0.116"
serde_test = "1.0.176"
simplelog = { version = "0.12.2", features = ["paris"] }
thiserror = "1.0.58"
tokio = "1.37.0"
uninit = "0.6.2"
uuid = "1.8.0"
walkdir = "2.5.0"
worker = "0.3.0"
zigzag = "0.1.0"
mimalloc = "0.1.42"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
or_fun_call = "deny"
