[workspace]
members = [
    "bench-vortex",
    "encodings/*",
    "pyvortex",
    "vortex-array",
    "vortex-buffer",
    "vortex-build",
    "vortex-datafusion",
    "vortex-dtype",
    "vortex-error",
    "vortex-expr",
    "vortex-flatbuffers",
    "vortex-sampling-compressor",
    "vortex-scalar",
    "vortex-serde",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
homepage = "https://github.com/spiraldb/vortex"
repository = "https://github.com/spiraldb/vortex"
authors = [
    "Robert Kruszewski <robert@spiraldb.com>, Nicholas Gates <nick@spiraldb.com>, Will Manning <will@spiraldb.com>",
]
license = "Apache-2.0"
keywords = ["vortex"]
include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
ahash = "0.8.11"
allocator-api2 = "0.2.16"
anyhow = "1.0"
arrayref = "0.3.7"
arrow = { version = "52.0.0", features = ["pyarrow"] }
arrow-arith = "52.0.0"
arrow-array = "52.0.0"
arrow-buffer = "52.0.0"
arrow-cast = "52.0.0"
arrow-csv = "52.0.0"
arrow-data = "52.0.0"
arrow-ipc = "52.0.0"
arrow-ord = "52.0.0"
arrow-schema = "52.0.0"
arrow-select = "52.0.0"
async-trait = "0.1"
bindgen = "0.69.4"
bytes = "1.6.0"
bzip2 = "0.4.4"
cargo_metadata = "0.18.1"
chrono = "0.4.38"
criterion = { version = "0.5.1", features = ["html_reports"] }
croaring = "2.0.0"
csv = "1.3.0"
datafusion = "40.0.0"
datafusion-common = "40.0.0"
datafusion-execution = "40.0.0"
datafusion-expr = "40.0.0"
datafusion-physical-expr = "40.0.0"
datafusion-physical-plan = "40.0.0"
divan = "0.1.14"
duckdb = "1.0.0"
enum-iterator = "2.0.0"
enum_dispatch = "0.3.13"
fallible-iterator = "0.3.0"
fastlanes = "0.1.5"
flatbuffers = "24.3.25"
flexbuffers = "2.0.0"
fs_extra = "1.3.0"
futures = { version = "0.3.30", default-features = false }
futures-executor = "0.3.30"
futures-util = "0.3.30"
getrandom = "0.2.14"
half = { version = "^2", features = ["std", "num-traits"] }
hashbrown = "0.14.3"
homedir = "0.3.3"
humansize = "2.1.3"
indicatif = "0.17.8"
itertools = "0.13.0"
lazy_static = "1.4.0"
leb128 = "0.2.5"
log = "0.4.21"
mimalloc = "0.1.42"
monoio = "0.2.3"
num-traits = "0.2.18"
num_enum = "0.7.2"
object_store = "0.10.2"
parquet = "52.0.0"
paste = "1.0.14"
pin-project = "1.1.5"
prettytable-rs = "0.10.0"
prost = "0.13.0"
prost-build = "0.13.0"
prost-types = "0.13.0"
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py311"] }
pyo3-log = "0.11.0"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.0", features = ["blocking"] }
rstest = "0.22"
seq-macro = "0.3.5"
serde = "1.0.197"
serde_json = "1.0.116"
serde_test = "1.0.176"
simplelog = { version = "0.12.2", features = ["paris"] }
tar = "0.4"
thiserror = "1.0.58"
tokio = "1.37.0"
uninit = "0.6.2"
uuid = "1.8.0"

# BEGIN crates published by this project
vortex-alp = { version = "0.2.0", path = "./encodings/alp" }
vortex-array = { version = "0.2.0", path = "./vortex-array" }
vortex-buffer = { version = "0.2.0", path = "./vortex-buffer" }
vortex-build = { version = "0.2.0", path = "./vortex-build" }
vortex-byte-bool = { version = "0.2.0", path = "./encodings/byte-bool" }
vortex-datafusion = { version = "0.2.0", path = "./vortex-datafusion" }
vortex-datetime-parts = { version = "0.2.0", path = "./encodings/datetime-parts" }
vortex-dict = { version = "0.2.0", path = "./encodings/dict" }
vortex-dtype = { version = "0.2.0", path = "./vortex-dtype" }
vortex-error = { version = "0.2.0", path = "./vortex-error" }
vortex-expr = { version = "0.2.0", path = "./vortex-expr" }
vortex-flatbuffers = { version = "0.2.0", path = "./vortex-flatbuffers" }
vortex-fastlanes = { version = "0.2.0", path = "./encodings/fastlanes" }
vortex-roaring = { version = "0.2.0", path = "./encodings/roaring" }
vortex-runend = { version = "0.2.0", path = "./encodings/runend" }
vortex-runend-bool = { version = "0.2.0", path = "./encodings/runend-bool" }
vortex-scalar = { version = "0.2.0", path = "./vortex-scalar" }
vortex-serde = { version = "0.2.0", path = "./vortex-serde" }
vortex-sampling-compressor = { version = "0.2.0", path = "./vortex-sampling-compressor" }
vortex-zigzag = { version = "0.2.0", path = "./encodings/zigzag" }
# END crates published by this project

walkdir = "2.5.0"
worker = "0.3.0"
xshell = "0.2.6"
zigzag = "0.1.0"
url = "2"
tempfile = "3"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
or_fun_call = "deny"
