[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nicholas Gates", email = "nick@nickgates.com" }
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dummy"] # Required for workspace project

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==7.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.11",
    "pip>=23.3.2",
    "maturin>=1.4.0",
    "snakeviz>=2.2.0",
    "py-spy>=0.3.14",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.11",
    "mkdocs-include-markdown-plugin>=6.0.4",
    "mike>=2.0.0",
]

[tool.rye.scripts]
serve-docs = "mkdocs serve"

[tool.rye.workspace]
members = [
    "pyenc",
]

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "UP", "I"]
# Do not auto-fix unused variables. This is really annoying when IntelliJ runs autofix while editing.
unfixable = ["F841"]
extend-exclude = [".venv"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
xfail_strict = true
