[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nicholas Gates", email = "nick@nickgates.com" }
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dummy"] # Required for workspace project

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.11",
    "pip>=23.3.2",
    "maturin>=1.7.2",
]

[tool.rye.workspace]
members = [
    "pyvortex",
    "docs",
]

[tool.ruff]
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "I"]
# Do not auto-fix unused variables. This is really annoying when IntelliJ runs autofix while editing.
unfixable = ["F841"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
xfail_strict = true
