[package]
name = "bench-vortex"
version = { workspace = true }
description = "End to end vortex benchmarks"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
csv = { workspace = true }
datafusion = { workspace = true }
enum-iterator = { workspace = true }
flexbuffers = { workspace = true }
futures = { workspace = true, features = ["executor"] }
humansize = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
parquet = { workspace = true, features = [] }
prettytable-rs = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
vortex-alp = { path = "../encodings/alp" }
vortex-array = { path = "../vortex-array" }
vortex-buffer = { path = "../vortex-buffer" }
vortex-datafusion = { path = "../vortex-datafusion" }
vortex-datetime-parts = { path = "../encodings/datetime-parts" }
vortex-dict = { path = "../encodings/dict" }
vortex-dtype = { path = "../vortex-dtype" }
vortex-error = { path = "../vortex-error", features = ["parquet"] }
vortex-fastlanes = { path = "../encodings/fastlanes" }
vortex-roaring = { path = "../encodings/roaring" }
vortex-runend = { path = "../encodings/runend" }
vortex-sampling-compressor = { path = "../vortex-sampling-compressor" }
vortex-serde = { path = "../vortex-serde", features = ["object_store"] }
xshell = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[[bench]]
name = "compress_benchmark"
harness = false

[[bench]]
name = "random_access"
harness = false

[[bench]]
name = "datafusion_benchmark"
harness = false

[[bench]]
name = "tpch_benchmark"
harness = false
