[package]
name = "bench-vortex"
version = { workspace = true }
publish = false
description = "End to end vortex benchmarks"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
csv = { workspace = true }
datafusion = { workspace = true }
enum-iterator = { workspace = true }
flexbuffers = { workspace = true }
futures = { workspace = true, features = ["executor"] }
homedir = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
parquet = { workspace = true, features = [] }
prettytable-rs = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
simplelog = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
vortex-alp = { workspace = true }
vortex-array = { workspace = true }
vortex-buffer = { workspace = true }
vortex-datafusion = { workspace = true }
vortex-datetime-parts = { workspace = true }
vortex-dict = { workspace = true }
vortex-dtype = { workspace = true }
vortex-error = { workspace = true, features = ["parquet"] }
vortex-fastlanes = { workspace = true }
vortex-roaring = { workspace = true }
vortex-runend = { workspace = true }
vortex-sampling-compressor = { workspace = true }
vortex-serde = { workspace = true, features = ["object_store"] }
xshell = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[[bin]]
name = "tpch_benchmark"
test = false
bench = false

[[bench]]
name = "compress_benchmark"
harness = false

[[bench]]
name = "random_access"
harness = false

[[bench]]
name = "datafusion_benchmark"
harness = false

[[bench]]
name = "tpch_benchmark"
harness = false
