[package]
name = "build-vortex"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cargo_metadata = { workspace = true }
prost-build = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
