[package]
name = "codecz-sys"
version = { workspace = true }
description = "Rust bindings for vortex zig compression codecs"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
safe-transmute = "0.11.2"
vortex-alloc = { version = "0.1.0", path = "../vortex-alloc" }

[build-dependencies]
bindgen = "0.69.1"
walkdir = "2.4.0"
