[package]
name = "codecz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-display = "0.1.3"
paste = "1.0.14"
safe-transmute = "0.11.2"
thiserror = "1.0.56"
codecz-sys = { version = "0.1.0", path = "../codecz-sys" }
half = "2.3.1"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "codecz_benchmark"
harness = false
