[package]
name = "codecz"
version = { workspace = true }
description = "Rust wrapper for vortex zig compression codecs"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
enum-display = "0.1.3"
paste = "1.0.14"
safe-transmute = "0.11.2"
thiserror = "1.0.56"
codecz-sys = { version = "0.1.0", path = "../codecz-sys" }
half = "2.3.1"
arrow-buffer = "50.0.0"
itertools = "0.12.1"
vortex-alloc = { version = "0.1.0", path = "../vortex-alloc" }

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "codecz_benchmark"
harness = false
