[project]
name = "docs"
version = "0.1.0"
description = "Vortex documentation."
authors = []
dependencies = [
    "pydata-sphinx-theme>=0.16.0",
    "sphinx>=8.0.2",
    "pyvortex",
    "sphinx-design>=0.6.1",
]
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true

[tool.rye.scripts]
build-docs = "sphinx-build -M html . _build --fail-on-warning --keep-going"
