[package]
name = "enc-alp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50.0.0" }
enc = { "path" = "../enc" }
linkme = "0.3.22"
itertools = "0.12.1"
codecz = { version = "0.1.0", path = "../codecz" }
log = { version = "0.4.20", features = [] }
