[package]
name = "enc-bench"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
arrow-array = "50.0.0"
enc = { path = "../enc" }
enc-alp = { path = "../enc-alp" }
enc-dict = { path = "../enc-dict" }
enc-patched = { path = "../enc-patched" }
enc-ree = { path = "../enc-ree" }
enc-roaring = { path = "../enc-roaring" }
enc-zigzag = { path = "../enc-zigzag" }
itertools = "0.12.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
log = "0.4.20"
parquet = "50.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking"] }
simplelog = { version = "0.12.1", features = ["paris"] }

[[bench]]
name = "enc_compress_benchmark"
harness = false