[package]
name = "enc-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "enc"
path = "src/lib.rs"

[dependencies]
arrow = {version = "50.0.0", features = ["pyarrow"]}
bytemuck = { version = "1", features = ["derive"] }
dyn-clone = "1.0.16"
half = "2.3.1"
itertools = "0.12.0"
log = "0.4.20"
num-traits = "0.2.17"
polars-arrow = {  version = "0.36.2", features = ["arrow_rs"] }
polars-core = "0.36.2"
polars-ops = { version = "0.36.2", features = ["search_sorted"] }
roaring = "0.10.2"
thiserror = "1.0.56"
codecz = { path = "../codecz" }
rand = { version = "0.8.5", features = [] }
once_cell = "1.19.0"
allocator-api2 = "0.2.16"
humansize = "2.1.3"
