[package]
name = "fastlanes"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrayref = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
seq-macro = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "fastlanes_bitpacking"
harness = false
