[package]
name = "fastlanez-sys"
version = { workspace = true }
description = "Vortex bindings for zig fastlanes codec"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
links = "fastlanez"

[lints]
workspace = true

[dependencies]
arrayref = "0.3.7"
paste = { workspace = true }
seq-macro = "0.3.5"
uninit = "0.6.2"

[build-dependencies]
bindgen = "0.69.1"
walkdir = "2.4.0"