[package]
name = "fastlanez-sys"
version = { workspace = true }
description = "Vortex bindings for zig fastlanes codec"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
links = "fastlanez"

[lints]
workspace = true

[build-dependencies]
bindgen = { workspace = true }
walkdir = { workspace = true }
