[package]
name = "fastlanez"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
fastlanez-sys = { version = "0.1.0", path = "../fastlanez-sys" }
arrayref = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
seq-macro = { workspace = true }
uninit = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "fastlanes_bitpacking"
harness = false
