[package]
name = "pyenc"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyenc"
crate-type = ["rlib", "cdylib"]

[dependencies]
enc-rs = { path = "../rust/enc" }
arrow2 = "0.18.0"
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py311"] }
pyo3-log = "0.9.0"
itertools = "0.10.5"
log = "0.4.20"

# We may need this workaround?
# https://pyo3.rs/v0.20.2/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
