[package]
name = "pyenc"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyenc"
crate-type = ["rlib", "cdylib"]

[dependencies]
arrow = { version = "50.0.0", features = ["ffi"] }
enc = { path = "../rust/enc" }
enc-patched = { path = "../rust/enc-patched" }
enc-roaring = { path = "../rust/enc-roaring" }
enc-zigzag = { path = "../rust/enc-zigzag" }
itertools = "0.12.0"
log = "0.4.20"
paste = "1.0.14"
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py311"] }
pyo3-log = "0.9.0"

# We may need this workaround?
# https://pyo3.rs/v0.20.2/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
