[project]
name = "enc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nicholas Gates", email = "nick@nickgates.com" }
]
dependencies = []
requires-python = ">= 3.11"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pyarrow>=14.0.0",
    "pip"
]

[tool.maturin]
python-source = "python"
module-name = "enc._lib"
features = ["pyo3/extension-module"]
