[package]
name = "pyvortex"
publish = false
version = { workspace = true }
description = "Python bindings for Vortex, an Apache Arrow-compatible toolkit for working with compressed array data."
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[lib]
name = "pyvortex"
crate-type = ["rlib", "cdylib"]
doctest = false

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
flexbuffers = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

vortex-alp = { workspace = true }
vortex-array = { workspace = true }
vortex-buffer = { workspace = true }
vortex-bytebool = { workspace = true }
vortex-datafusion = { workspace = true }
vortex-datetime-dtype = { workspace = true }
vortex-datetime-parts = { workspace = true }
vortex-dict = { workspace = true }
vortex-dtype = { workspace = true, default-features = false }
vortex-error = { workspace = true }
vortex-expr = { workspace = true }
vortex-fastlanes = { workspace = true }
vortex-flatbuffers = { workspace = true }
vortex-fsst = { workspace = true }
vortex-proto = { workspace = true }
vortex-roaring = { workspace = true }
vortex-runend = { workspace = true }
vortex-runend-bool = { workspace = true }
vortex-sampling-compressor = { workspace = true }
vortex-scalar = { workspace = true, default-features = false }
vortex-serde = { workspace = true, default-features = false, features = ["tokio"] }
vortex-zigzag = { workspace = true }

# We may need this workaround?
# https://pyo3.rs/v0.20.2/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
