[package]
name = "pyvortex"
publish = false
version = { workspace = true }
description = "Python bindings for Vortex, an Apache Arrow-compatible toolkit for working with compressed array data."
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[lib]
name = "pyvortex"
crate-type = ["rlib", "cdylib"]
doctest = false

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
flexbuffers = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

vortex-alp = { workspace = true }
vortex-array = { workspace = true }
vortex-dict = { workspace = true }
vortex-dtype = { workspace = true }
vortex-error = { workspace = true }
vortex-expr = { workspace = true }
vortex-fastlanes = { workspace = true }
vortex-roaring = { workspace = true }
vortex-runend = { workspace = true }
vortex-sampling-compressor = { workspace = true }
vortex-scalar = { workspace = true }
vortex-serde = { workspace = true, features = ["tokio"] }
vortex-zigzag = { workspace = true }

